// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderHistoryPage /> Renders correctly in various states renders empty orders 1`] = `
<section
  className="page__order-history"
>
  <h1>
    Order History
  </h1>
  <div>
    <p>
      Orders you place with localhost will appear here.
    </p>
  </div>
</section>
`;

exports[`<OrderHistoryPage /> Renders correctly in various states renders loading state 1`] = `
<section
  className="page__order-history"
>
  <h1>
    Order History
  </h1>
  <div>
    <div>
      <div
        className="d-flex justify-content-center align-items-center flex-column"
        style={
          Object {
            "height": "50vh",
          }
        }
      >
        <div
          className="spinner-border text-primary"
          role="status"
        >
          <span
            className="sr-only"
          >
            Loading orders...
          </span>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`<OrderHistoryPage /> Renders correctly in various states renders orders table with pagination 1`] = `
<section
  className="page__order-history"
>
  <h1>
    Order History
  </h1>
  <div>
    <nav
      aria-label="pagination navigation"
      className="pagination-margin pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 2, Current Page, of 10
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <button
            aria-label="Previous, Page 1"
            className="previous page-link btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item"
        >
          <button
            aria-label="Next, Page 3"
            className="next page-link btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</section>
`;
